test/libsolidity/syntaxTests/specialFunctions/types_with_unspecified_encoding_internal_functions.sol
contract C {
    function f() public pure {
        bytes32 h = keccak256(keccak256, f, this.f.gas, block.blockhash);
        h;
    }
}
// ----
// TypeError: This type cannot be encoded.
// TypeError: This type cannot be encoded.
// TypeError: This type cannot be encoded.
// TypeError: This type cannot be encoded.
